--- a/app/views/top/result.html.erb
+++ b/app/views/top/result.html.erb
@@ -1,6 +1,5 @@
-<div class="inner">
-    
-    <div class="result">
+<div class="inner result_inner">
+    <div class="result_box">
         <% if @sunset_time %>
         <h1>
             <%= @city %>の日没時刻は<span><%= @sunset %></span>
