--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,15 @@
     sans-serif;
  }
 
+a {
+   color: #273966;
+   text-decoration: none;
+}
+
+a:hover {
+   color: #618eff;
+}
+
  header {
    text-align: center;
    background-color: #273966;
@@ -77,10 +86,13 @@
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
+ }
+
+ .top_inner {
    color: #fff;
  }
 
- .inner h2 {
+ .top_inner h2 {
    margin-bottom: 30px;
    font-size: 1.25rem;
    text-shadow: 0 0px 20px rgba(0,0,0,0.6);
@@ -198,14 +210,29 @@
    color: #273966;
  }
 
- footer a {
+ footer small {
    color: #273966;
-   text-decoration: none;
  }
 
- footer a:hover {
-   color: #618eff;
- }
+.privacy_inner {
+   width: 60%;
+   color: #273966;
+   font-weight: normal;
+   margin-bottom: 20px;
+}
+
+.privacy_inner h2,
+.privacy_inner h3 {
+   margin: 10px;
+}
+
+.privacy_inner p {
+   margin-bottom: 10px;
+}
+
+.support_inner {
+   text-align: center;
+}
 
  @media (max-width: 1025px) {
 
