スペルミス修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <div class="wrapper">
     <% if current_page?('/') %>
       <div class="cont">
-        <div class="inner top-inner">
+        <div class="inner top_inner">
         <h2>日付と都市を選択すると<br>夕焼けとマジックアワーの時間を表示します</h2>
         <%= form_with url: '/', method: :get, local: true do |f| %>
           <div class="form_area">
