デザイン修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,6 +66,7 @@ a:hover {
  }
  
  .header_logo img {
+   padding-top: 5px;
    width: 100px;
  }
 
@@ -75,7 +76,7 @@ a:hover {
 
  .cont {
    padding: 4% 0;
-   height: 500px;
+   height: 450px;
    text-align: center;
    background-image: image-url("bgi.jpg");
    background-size: cover;
