--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag('favicon.ico') %>
+    <meta name="description" content="夕焼けとマジックアワーの時間がわかるサイト。綺麗な夕焼けの写真撮影に適した時刻が分かります。">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name = 'viewport' content = 'width=device-width', initial-scale=1>
