--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>夕焼け&マジックアワー｜夕焼けの時間がわかるサイト</title>
+    <title>シンプルマジックアワー｜マジックアワーの時間がわかるサイト</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag('favicon.ico') %>
