ロゴの変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>シンプルマジックアワー｜マジックアワーの時間がわかるサイト</title>
+    <title>シンプルマジックアワー｜夕焼けとマジックアワーの時間がわかるサイト</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag('favicon.ico') %>
     <%= favicon_link_tag('logo-mark.png', rel: 'apple-touch-icon', sizes: '180x180') %>
-    <meta name="description" content="夕焼けとマジックアワーの時間がわかるサイト。綺麗な夕焼けの写真撮影に適した時刻が分かります。">
+    <meta name="description" content="夕焼けとマジックアワーの時間がわかるシンプルなサイト。綺麗な夕焼けの写真撮影に適した時刻が分かります。">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name = 'viewport' content = 'width=device-width', initial-scale=1>
@@ -78,7 +78,7 @@
           <%= link_to "プライベートポリシー", "/privacy" %>
         </p>
       </div>
-      <small>&copy;夕焼け&マジックアワー 2021</small>
+      <small>&copy;シンプルマジックアワー 2021</small>
     </footer>
   </body>
 </html>
