スペル変更

--- a/app/views/top/terms.html.erb
+++ b/app/views/top/terms.html.erb
@@ -2,7 +2,7 @@
   <h2>利用規約</h2>
   <h3>はじめに</h3>
   <p>
-  この利用規約（以下、「本規約」と言います。）は、「夕焼け&マジックアワー」（以下、「当サイト」と言います）を利用する際の全ての行為について適用されます。
+  この利用規約（以下、「本規約」と言います。）は、「シンプルマジックアワー」（以下、「当サイト」と言います）を利用する際の全ての行為について適用されます。
   </p>
   <p>
   利用者が当サイトを利用する場合は、本規約のすべての項目に同意し、利用契約を締結したものと見なします。
