広告の位置変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
     <%= favicon_link_tag('favicon.ico') %>
     <%= favicon_link_tag('logo-mark.png', rel: 'apple-touch-icon', sizes: '180x180') %>
-    <meta name="description" content="夕焼けとマジックアワーの時間がわかるシンプルなサイト。綺麗な夕焼けの写真撮影に適した時刻が分かります。">
+    <meta name="description" content="夕焼けとマジックアワーの時間がわかるシンプルなサイト。綺麗な夕焼けの写真撮影に適した時刻が何時か分かります。">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name = 'viewport' content = 'width=device-width', initial-scale=1>
@@ -55,18 +55,6 @@
       <% end %>
       <%= yield %>
     </div>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
-     crossorigin="anonymous"></script>
-    <!-- ディスプレイ広告(横長) -->
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-2284559402460554"
-        data-ad-slot="5902443307"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
     <footer>
       <div class="footer_inner">
         <p>
