--- a/app/views/top/terms.html.erb
+++ b/app/views/top/terms.html.erb
@@ -49,6 +49,18 @@
   <p>
   裁判上の紛争が生じた場合は、東京地方裁判所または東京簡易裁判所を第一審の専属的合意管轄裁判所とします。
   </p>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
+     crossorigin="anonymous"></script>
+<!-- ディスプレイ広告(横長) -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2284559402460554"
+     data-ad-slot="5902443307"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 
 
