--- a/app/views/top/privacy.html.erb
+++ b/app/views/top/privacy.html.erb
@@ -25,5 +25,17 @@
   <p>
   本ポリシーに関するお問い合わせは、<%= link_to "こちら", "/support" %>のお問い合わせフォームよりお願いいたします。
   </p>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
+     crossorigin="anonymous"></script>
+<!-- ディスプレイ広告(横長) -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2284559402460554"
+     data-ad-slot="5902443307"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 
