--- a/app/views/top/result.html.erb
+++ b/app/views/top/result.html.erb
@@ -13,3 +13,15 @@
         </p>
     </div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
+     crossorigin="anonymous"></script>
+<!-- ディスプレイ広告(横長) -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2284559402460554"
+     data-ad-slot="5902443307"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
