--- a/app/views/top/support.html.erb
+++ b/app/views/top/support.html.erb
@@ -1,3 +1,15 @@
 <div class="support_inner inner">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfFOh0mfTjSbiptDrhA0ogTiHQleDMuGzxETzhgLruJNLlUUA/viewform?embedded=true" height="574" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
+     crossorigin="anonymous"></script>
+<!-- ディスプレイ広告(横長) -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2284559402460554"
+     data-ad-slot="5902443307"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
