--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -1,3 +1,52 @@
+<div class="cont">
+    <div class="inner top_inner">
+        <h2>日付と都市を選択すると<br>夕焼けとマジックアワーの時間を表示します</h2>
+        <%= form_with url: '/result', method: :get, local: true do |f| %>
+        <div class="form_area">
+            <%= f.date_select :date, value: Time.now.strftime('%Y-%m-%d'), use_month_numbers:true, date_separator:'/' %>
+            <%= f.select :city, [
+              ['札幌', '札幌市'],
+              ['仙台', '仙台市'], 
+              ['新潟', '新潟市'],
+              ['東京', '新宿区'], 
+              ['名古屋', '名古屋市'],
+              ['大阪', '大阪市'],
+              ['姫路', '姫路市'],
+              ['高知', '高知市'],
+              ['広島', '広島市'],
+              ['福岡', '福岡市'],
+              ['那覇', '那覇市'],
+              ], { selected: '新宿区' } %>
+        </div> 
+        <%= f.submit "時刻を表示", class: 'form_btn' %>
+        <% end %>
+    </div>
+</div>
+<div class="inner result_inner">
 
+    <div class="result_box">
+        <h1>
+            新宿区の日没時刻は<span><%= @sunset %></span>
+        </h1>
+        <p class="mh_time">
+            マジックアワーは<span><%= @thi_ago %></span>から<span><%= @thi_late %></span>
+        </p>
+        <p class="mh_text">
+            日没時から前後30分間はマジックアワーと呼ばれる時間帯です。<br>太陽の高度が6度から-6度に位置する時間帯で、空が青く幻想的に見えることから写真撮影に絶好のタイミングと言われています。
+        </p>
+    </div>
+</div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
+     crossorigin="anonymous"></script>
+<!-- ディスプレイ広告(横長) -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2284559402460554"
+     data-ad-slot="5902443307"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
