--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,14 @@
     <%= favicon_link_tag('favicon.ico') %>
     <%= favicon_link_tag('logo-mark.png', rel: 'apple-touch-icon', sizes: '180x180') %>
     <meta name="description" content="夕焼けとマジックアワーの時間がわかるシンプルなサイト。綺麗な夕焼けの写真撮影に適した時刻が何時か分かります。">
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name = 'viewport' content = 'width=device-width', initial-scale=1>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
      crossorigin="anonymous"></script>
-     
     <meta name="google-site-verification" content="1iBPvjeDQjXj66sxMfl99_93jOrGKBMT1e534iR0r90" />
+
+    <link rel="canonical" href="https://simple-magichour.com">
   </head>
 
   <body>
