デザイン修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
     <%= favicon_link_tag('favicon.ico') %>
     <%= favicon_link_tag('logo-mark.png', rel: 'apple-touch-icon', sizes: '180x180') %>
-    <meta name="description" content="夕焼けとマジックアワーの時間がわかるシンプルなサイト。綺麗な夕焼けの写真撮影に適した時刻が何時か分かります。">
+    <meta name="description" content="目的地の夕焼けとマジックアワーの時間を計算。綺麗な夕焼けの写真撮影に適した時刻が何時か分かります。">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name = 'viewport' content = 'width=device-width', initial-scale=1>
