--- a/app/views/top/privacy.html.erb
+++ b/app/views/top/privacy.html.erb
@@ -25,6 +25,9 @@
   <p>
   本ポリシーに関するお問い合わせは、<%= link_to "こちら", "/support" %>のお問い合わせフォームよりお願いいたします。
   </p>
+  <p>
+    <%= link_to "トップに戻る", "/" %>
+  </p>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
      crossorigin="anonymous"></script>
 <!-- ディスプレイ広告(横長) -->
