--- a/app/views/top/privacy.html.erb
+++ b/app/views/top/privacy.html.erb
@@ -25,7 +25,7 @@
   <p>
   本ポリシーに関するお問い合わせは、<%= link_to "こちら", "/support" %>のお問い合わせフォームよりお願いいたします。
   </p>
-  <p>
+  <p class = "top_link">
     <%= link_to "トップに戻る", "/" %>
   </p>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
