--- a/app/views/top/support.html.erb
+++ b/app/views/top/support.html.erb
@@ -2,8 +2,8 @@
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfFOh0mfTjSbiptDrhA0ogTiHQleDMuGzxETzhgLruJNLlUUA/viewform?embedded=true" height="574" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
      crossorigin="anonymous"></script>
-<p>
-<%= link_to "トップに戻る", "/" %>
+<p class = "top_link">
+     <%= link_to "トップに戻る", "/" %>
 </p>
 <!-- ディスプレイ広告(横長) -->
 <ins class="adsbygoogle"
