--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -9,9 +9,10 @@
               ['仙台', '仙台市'], 
               ['新潟', '新潟市'],
               ['東京', '新宿区'], 
+              ['横浜', '横浜市'],
               ['名古屋', '名古屋市'],
               ['大阪', '大阪市'],
-              ['姫路', '姫路市'],
+              ['神戸', '神戸市'],
               ['高知', '高知市'],
               ['広島', '広島市'],
               ['福岡', '福岡市'],
@@ -23,10 +24,9 @@
     </div>
 </div>
 <div class="inner result_inner">
-
     <div class="result_box">
         <h1>
-            新宿区の日没時刻は<span><%= @sunset %></span>
+            今日の東京の日没時刻は<span><%= @sunset %></span>
         </h1>
         <p class="mh_time">
             マジックアワーは<span><%= @thi_ago %></span>から<span><%= @thi_late %></span>
