日没時間アクション共通化

--- a/app/views/top/result.html.erb
+++ b/app/views/top/result.html.erb
@@ -25,8 +25,9 @@
 <div class="inner result_inner">
     <div class="result_box">
         <% if @sunset_time %>
-        <h1>
-            <%= @city %>の日没時刻は<span><%= @sunset %></span>
+        <p class="date"><%= @date %></p>
+        <h1 class="date">
+            <%= @city %>の日没時刻は<span><%= @time %></span>
         </h1>
         <p class="mh_time">
             マジックアワーは<span><%= @thi_ago %></span>から<span><%= @thi_late %></span>
@@ -37,15 +38,3 @@
         </p>
     </div>
 </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
-     crossorigin="anonymous"></script>
-<!-- ディスプレイ広告(横長) -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-2284559402460554"
-     data-ad-slot="5902443307"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
