--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,21 +165,23 @@ a:hover {
    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
    background-color: #fff;
    color: #273966;
+   text-align: center;
+ }
+
+ .date {
+   font-size: 1.2rem;
  }
 
  .result_box h1 {
-   text-align: center;
    font-size: 1.6rem;
    border-bottom: 4px solid #ff7361;
  }
 
  .result_box span {
    color:#618eff;
-   
  }
 
  .mh_time {
-   text-align: center;
    margin-top: 20px;
    font-size: 1.25rem;
  }
@@ -187,7 +189,7 @@ a:hover {
  .mh_text {
    margin-left: auto;
    margin-right: auto;
-   margin-top: 10px;
+   padding: 2%;
    text-align: left;
    font-weight: normal;
  }
@@ -271,6 +273,10 @@ a:hover {
     text-align: center;
     font-size: 1.2rem;
     border-bottom: 2px solid #ff7361;
+   }
+
+   .date {
+     font-size: 1rem;
    }
 
    .mh_time {
