--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -26,7 +26,7 @@
 <div class="inner result_inner">
     <div class="result_box">
         <h1>
-            今日の東京の日没時刻は<span><%= @sunset %></span>
+            今日の東京の日没時刻は<span><%= @time %></span>
         </h1>
         <p class="mh_time">
             マジックアワーは<span><%= @thi_ago %></span>から<span><%= @thi_late %></span>
@@ -36,17 +36,5 @@
         </p>
     </div>
 </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
-     crossorigin="anonymous"></script>
-<!-- ディスプレイ広告(横長) -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-2284559402460554"
-     data-ad-slot="5902443307"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
 
