--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,8 +78,7 @@ a:hover {
    padding: 4% 0;
    height: 450px;
    text-align: center;
-   background-image: image-url("bgi.jpg");
-   background-size: cover;
+   background-image: linear-gradient(135deg, #618eff 0%, #8156b3 100%);
  }
 
  .inner {
