トップページデザイン修正

--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -26,10 +26,10 @@
 <div class="inner result_inner">
     <div class="result_box">
         <h1>
-            今日の東京の日没時刻は<span><%= @time %></span>
+            ここに日没時間が表示されます
         </h1>
         <p class="mh_time">
-            マジックアワーは<span><%= @thi_ago %></span>から<span><%= @thi_late %></span>
+            ここにマジックアワーの時間帯が表示されます
         </p>
         <p class="mh_text">
             日没時から前後30分間はマジックアワーと呼ばれる時間帯です。<br>太陽の高度が6度から-6度に位置する時間帯で、空が青く幻想的に見えることから写真撮影に絶好のタイミングと言われています。
