日没時間メソッドの戻り値修正

--- a/app/views/top/result.html.erb
+++ b/app/views/top/result.html.erb
@@ -11,7 +11,7 @@
               ['東京', '新宿区'], 
               ['名古屋', '名古屋市'],
               ['大阪', '大阪市'],
-              ['姫路', '姫路市'],
+              ['神戸', '神戸市'],
               ['高知', '高知市'],
               ['広島', '広島市'],
               ['福岡', '福岡市'],
