デザイン修正

--- a/app/views/top/result.html.erb
+++ b/app/views/top/result.html.erb
@@ -26,7 +26,7 @@
     <div class="result_box">
         <p class="date"><%= @date %></p>
         <h1 class="date">
-            <%= @city %>の日没時刻は<span><%= @time %></span>
+            <%= @city %>の日没時刻は<span><%= @set_time %></span>
         </h1>
         <p class="mh_time">
             マジックアワーは<span><%= @thi_ago %></span>から<span><%= @thi_late %></span>
