ツイートボタン追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,6 +194,10 @@ a:hover {
    font-weight: normal;
  }
 
+ .tweet_link {
+   font-size: 0.9rem;
+ }
+
  footer {
    text-align: center;
    padding: 10px;
