ツイッターカード作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <meta name = 'viewport' content = 'width=device-width', initial-scale=1>
     <meta name="google-site-verification" content="1iBPvjeDQjXj66sxMfl99_93jOrGKBMT1e534iR0r90" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@96bino18" />
+    <meta name="twitter:site" content="@simplemagichour" />
     <meta name="twitter:title" content="シンプルマジックアワー" />
     <meta name="twitter:description" content="夕焼けとマジックアワーの時間がわかるサイト" />
     <meta name="twitter:image" content="https://file33-d.kuku.lu/thumbs/20211205-1007_67724beba962d78b71e80661c55f47f6.jpg" />
