アドセンスのコード挿入

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
     <meta name="twitter:image" content="https://file33-d.kuku.lu/thumbs/20211205-1007_67724beba962d78b71e80661c55f47f6.jpg" />
 
     <link rel="canonical" href="https://simple-magichour.com">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284559402460554"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
