--- a/app/views/top/result.html.erb
+++ b/app/views/top/result.html.erb
@@ -32,10 +32,10 @@
             マジックアワーは<span><%= @thi_ago %></span>から<span><%= @thi_late %></span>
         </p>
         <p class="mh_text">
-            日没時から前後30分間はマジックアワーと呼ばれる時間帯です。<br>太陽の高度が6度から-6度に位置する時間帯で、空が青く幻想的に見えることから写真撮影に絶好のタイミングと言われています。
+            日没時から前後30分間はマジックアワーと呼ばれる時間帯です。<br>太陽の高度が6度から-6度に位置する時間帯で、<br>空が青く幻想的に見えることから写真撮影に絶好のタイミングと言われています。
         </p>
         <p class="tweet_link">
-            <%= link_to '日没時刻をツイートする', "https://twitter.com/intent/tweet?url=""https://simple-magichour.com/&text=#{ @city }の日没は#{ @set_time }です。
+            <%= link_to '結果をツイートする', "https://twitter.com/intent/tweet?url=""https://simple-magichour.com/&text=#{ @city }の日没は#{ @set_time }です。
             マジックアワーは#{ @thi_ago }から#{ @thi_late }の間です。", target: :_blank, rel: "noopener noreferrer" %>
         </p>
     </div>
